styles (banner) fix title spacing (#35)
* styles (banner) fix title spacing

* mobile

* update french banner

--- a/src/components/banner/banner.less
+++ b/src/components/banner/banner.less
@@ -90,10 +90,11 @@
 					color: @color-text;
 					padding: 15px 0;
 					margin-bottom: 10px;
+					line-height: 32px;
 
 					@media @smartphone {
 						font-size: 28px;
-						line-height: inherit;
+						line-height: 28px;
 						font-weight: bold;
 					}
 				}
